--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -76,8 +76,7 @@ class User:
     name: str
     email: str
 
-    # computed with `get_username`
-    # a Python resolver (function)
+    # computed with the Python resolver (function) `get_username`
     username: str
 
     # Chalk's SDK provides common functions that run in C++
