--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -197,7 +197,7 @@ def get_username(
 Some data sources, like LLMs or 3rd party APIs, are expensive or slow to call at inference time.
 Chalk supports caching features to optimize for latency and cost:
 
-- Define cache windows inline with your features
+- Define cache TTLs inline with your features
 - Override staleness at query-time when fresh data is critical
 - Pre-warm caches and backfill pipelines for performance
 
