--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -272,7 +272,7 @@ With this unified approach, teams can easily:
 - Reduce time-to-production for new models from months to days
 - Standardize and share features across the entire organization
 
-Chalk offers the developer-friendly experience of Python while achieving high performance by transpiling functions like `get_username` into optimized Velox expressions using a Symbolic Python Interpreter.
+Chalk offers the developer-friendly experience of Python while achieving high performance by transpiling functions like `get_username` into optimized Velox expressions by parsing the Abstract Syntax Tree (AST) of the Python code. 
 
 ```py
 lower(
