--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -304,7 +304,7 @@ We wrote an [engineering blog post on our Symbolic Python interpreter](https://c
 Traditional ML systems often operate as opaque black boxes, especially when transformation logic gets embedded across disparate data pipelines, obscuring the connection between inputs and predictions.
 Chalk brings comprehensive observability to every aspect of your ML systems, making it easy to:
 
-- Trace every model feature back to its original data sources with detailed lineage tracking — showing exactly where data came from
+- Trace every model feature back to its original data sources with detailed lineage tracking, showing exactly where the data originated
 - Troubleshoot and optimize your ML pipelines with end-to-end tracing that tracks the inputs and outputs of every step in any run
 - Monitor feature drift, access patterns, and performance metrics in real-time across all your model deployments
 
