--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -308,7 +308,7 @@ Chalk brings comprehensive observability to every aspect of your ML systems, mak
 - Troubleshoot and optimize your ML pipelines with end-to-end tracing that tracks the inputs and outputs of every step in any run
 - Monitor feature drift, access patterns, and performance metrics in real-time across all your model deployments
 
-Deploy faster and with confidence — knowing exactly how your systems behave at each step of the machine learning lifecycle.
+Deploy faster and confidently, knowing exactly how your systems behave at each step of the machine learning lifecycle.
 
 ---
 
