--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -314,7 +314,7 @@ Deploy faster and confidently, knowing exactly how your systems behave at each s
 
 ## Chalk for MLOps
 
-Let Chalk handle orchestrating, caching, and serving features at scale freeing up you and your team to focus on building models—not plumbing.
+Let Chalk handle orchestrating, caching, and serving features at scale, freeing you and your team to focus on building models, not plumbing.
 
 Chalk brings modern software engineering to data workflows:
 
