--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -322,7 +322,7 @@ Chalk brings modern software engineering to data workflows:
 - Experimental changes are isolated to branches and safely promoted via CLI with gradual rollouts
 - Models are versioned and can be easily rolled-back the same way you would an API
 
-Easily serve features across your entire tech stack with SDKs in Python, JavaScript, Java and more - making inference accessible to any team whether for internal tools or customer-facing applications.
+Easily serve features across your entire tech stack with [SDKs](/docs/query-basics) in Python, JavaScript, Java and more - making inference accessible to any team whether for internal tools or customer-facing applications.
 
 <RequestingFeaturesOnline style={{ height: 328 }} />
 
