--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -446,7 +446,7 @@ With Chalk, data scientists easily integrate new data sources, test new features
 ## Chalk for Data Engineers
 
 Manage features declaratively without the complexity of orchestrating ETL jobs, feature stores, and offline/online datastores.
-Chalk makes it easy to
+Chalk makes it easy to:
 
 - Cache expensive computations with configurable staleness
 - Manage model versions and A/B test features
