--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -272,7 +272,7 @@ With this unified approach, teams can easily:
 - Reduce time-to-production for new models from months to days
 - Standardize and share features across the entire organization
 
-Chalk offers the developer-friendly experience of Python while achieving high performance by transpiling functions like `get_username` into optimized Velox expressions by parsing the Abstract Syntax Tree (AST) of the Python code. 
+Chalk offers the developer-friendly experience of Python while achieving high performance by transpiling functions like `get_username` into optimized Velox expressions by parsing the Abstract Syntax Tree (AST) of the Python code.
 
 ```py
 lower(
@@ -439,7 +439,7 @@ Chalk evaluates features with point-in-time lookups, guaranteeing evaluation onl
 
 <TemporalCorrectness />
 
-With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness](docs/temporal-consistency), and collaborate with Git-like branches and flexible data exports (to data catalogs like Parquet and Iceberg).
+With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness](docs/temporal-consistency), and collaborate with Git-like branches and flexible data exports (to data catalogs like Iceberg and Parquet).
 
 ---
 
