--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -449,10 +449,10 @@ With Chalk, data scientists easily integrate new data sources, test new features
 Manage features declaratively without the complexity of orchestrating ETL jobs, feature stores, and offline/online datastores.
 Chalk makes it easy to:
 
-- Cache expensive computations with configurable staleness
-- Manage model versions and A/B test features
-- Create complex joins and relationships between data entities
-- Configure time-window aggregations with flexible materialization options
+- Cache expensive computations with [configurable staleness](/docs/feature-caching)
+- Manage model versions and [A/B test features](/docs/feature-versions)
+- Create [complex joins and relationships](docs/has-many#composite-join-keys) between data entities
+- Configure [time-window aggregations](/docs/aggregations) with flexible [materialization options](/docs/materialized_aggregations)
 
 ```python
 @features
