--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -341,6 +341,11 @@ Build enterprise-grade AI applications without stitching together LLMs, prompts,
 - Reuse and manage prompts with [named prompts](/docs/prompts)
 
 ```py
+import chalk.functions as F
+import chalk.prompts as P
+from chalk.features import DataFrame, Primary, Vector, embed, features, has_many, _
+from pydantic import BaseModel
+
 # Use structured output to easily incorporate unstructured data in our ML pipelines
 class AnalyzedReceiptStruct(BaseModel):
     expense_category: ExpenseCategoryEnum
@@ -357,10 +362,12 @@ class Transaction:
 
     llm: P.PromptResponse = P.completion(
         model="gpt-4o-mini-2024-07-18",
-        messages=[P.user_message(
-            "””Analyze the following receipt:
+        messages=[P.message(
+                role="user",
+                content=F.jinja(
+            """Analyze the following receipt:
             Line items: {{Transaction.receipt.line_items}}
-            Merchant: {{Transaction.merchant.name}} {{Transaction.merchant.description}}”””
+            Merchant: {{Transaction.merchant.name}} {{Transaction.merchant.description}}""")
         )],
         output_structure=AnalyzedReceiptStruct,
     )
@@ -455,6 +462,21 @@ Chalk makes it easy to:
 - Configure [time-window aggregations](/docs/aggregations) with flexible [materialization options](/docs/materialized_aggregations)
 
 ```python
+from chalk.features import DataFrame,
+  feature,
+  features,
+  _
+from chalk.streams import Windowed, windowed
+
+@features
+class Transaction:
+    id: int
+    created_at: datetime
+    amount: float
+
+    user_id: "User.id"
+    user: "User"
+
 @features
 class User:
     id: int
@@ -472,6 +494,7 @@ class User:
 
     count_txns: Windowed[int] = windowed(
         "1d", "365d",
+        expression=_.txns[_.created_at > _.chalk_window].count(),
         # see our docs on materialized windowed aggregations
         # https://docs.chalk.ai/docs/materialized_aggregations
         materialization=True,
