fix: Final sentence

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -19,7 +19,7 @@ import { PyDiffEditor } from '@/components/Editor'
 <DocsHero />
 
 Build, deploy, and iterate faster with Chalk — a programmable feature engine that powers low-latency inference, rapid model iteration, and observability across your model lifecycle.
-Chalk solves core pain points teams face when building enterprise AI and ML systems:
+Chalk eliminates the core pain points that slow down teams building enterprise AI and ML systems, providing an end-to-end platform for:
 
 - Deploying and scaling production-grade infrastructure
 - Authoring feature pipelines in pure Python — No DSLs! No rewrites!
