--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -513,6 +513,6 @@ With Chalk, Data Engineers easily manage features programmatically and maintain 
 ## A full-stack solution for building and deploying enterprise AI
 
 Chalk gives teams the building blocks to prototype and deploy production AI and ML systems quickly and reliably.
-Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the go-to platform for inference!
+Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the go-to platform for inference.
 
-[Schedule a demo](https://chalk.ai/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team!
+[Schedule a demo](https://chalk.ai/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team.
