--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -447,7 +447,7 @@ You can provide labels with different past timestamps to easily get historical f
 
 <TemporalCorrectness />
 
-With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness](docs/temporal-consistency), and collaborate with Git-like branches and flexible data exports (to data catalogs like Iceberg and Parquet).
+With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness](/docs/temporal-consistency), and collaborate with Git-like branches and flexible data exports (to data catalogs like Iceberg and Parquet).
 
 ---
 
@@ -515,4 +515,4 @@ With Chalk, Data Engineers easily manage features programmatically and maintain 
 Chalk gives teams the building blocks to prototype and deploy production AI and ML systems quickly and reliably.
 Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the go-to platform for inference.
 
-[Schedule a demo](https://chalk.ai/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team.
+[Schedule a demo](/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team.
