fix: fixing link

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -458,7 +458,7 @@ Chalk makes it easy to:
 
 - Cache expensive computations with [configurable staleness](/docs/feature-caching)
 - Manage model versions and [A/B test features](/docs/feature-versions)
-- Create [complex joins and relationships](docs/has-many#composite-join-keys) between data entities
+- Create [complex joins and relationships](/docs/has-many#composite-join-keys) between data entities
 - Configure [time-window aggregations](/docs/aggregations) with flexible [materialization options](/docs/materialized_aggregations)
 
 ```python
