fix: broken link

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -515,4 +515,4 @@ With Chalk, Data Engineers easily manage features programmatically and maintain 
 Chalk gives teams the building blocks to prototype and deploy production AI and ML systems quickly and reliably.
 Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the go-to platform for inference.
 
-[Schedule a demo](/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team.
+[Schedule a demo](https://chalk.ai/book-demo?utm_source=docs&utm_campaign=what-is-chalk) to see how Chalk fits with your team.
