--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -160,7 +160,7 @@ Here's an example of a generated query plan:
 
 ### How does Chalk resolve features? What are Chalk resolvers?
 
-Chalk connects directly to your existing infrastructure and underlying data stores (Athena, BigQuery, Postgres, Iceberg catalog, etc.) with [SQL resolvers](https://docs.chalk.ai/docs/sql-resolvers) and to APIs (microservices, 3rd-party clients, LLMs) with [Python resolvers](https://docs.chalk.ai/docs/python-resolvers).
+Chalk connects directly to your existing infrastructure and underlying data stores (Athena, BigQuery, Postgres, Iceberg catalog, etc.) with [SQL resolvers](/docs/sql-resolvers) and to APIs (microservices, 3rd-party clients, LLMs) with [Python resolvers](/docs/python-resolvers).
 Resolvers make it easy to integrate a wide variety of data sources, join them together, and use them in inference.
 
 Decoupling feature logic from ETL pipelines unlocks:
