docs: marketplace billing

--- a/billing.mdx
+++ b/billing.mdx
@@ -74,5 +74,25 @@ your other workloads.
 Chalk only charges for compute resources (i.e., running nodes). If a staging environment is idle or shut
 down, it won’t incur costs.
 
+## Chalk Marketplace Billing
+
+Chalk supports marketplace billing through both AWS and GCP. With this setup, your Chalk usage is billed directly to
+your cloud infrastructure provider, appearing as a line item on your existing bill and simplifying your payment process.
+
+If you’re interested in enabling marketplace billing, reach out to your Chalk representative. Our finance team will guide
+you through the required steps and coordinate a private offer. Once finalized, you’ll be able to receive and pay
+your Chalk charges directly through
+[AWS Marketplace](https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-paying-for-products.html) or
+[GCP Marketplace](https://cloud.google.com/marketplace/docs/understanding-billing).
+
+Depending on your Chalk agreement, we can accommodate:
+- Prepaid bundles, invoiced up front.
+- Standard usage-based billing, invoiced monthly in arrears. For example, your April Chalk usage will appear on
+your April cloud provider bill.
+
+The benefits of marketplace billing include:
+- No extra invoices to manage
+- Chalk charges consolidated with your existing infrastructure spend
+- Available on both AWS and GCP
 
 
