--- a/windowed-streaming.mdx
+++ b/windowed-streaming.mdx
@@ -22,26 +22,25 @@ as new messages arrive.
 ## Setting up a materialized aggregation
 
 Setting up features for materialized aggregation with streaming is almost identical to the method described in the
-[materialized_aggregations docs](/docs/materialized_aggregations). Just remember to set
-a max staleness and set `etl_offline_to_online=True` on the feature class, as with all other streaming features.
+[materialized_aggregations docs](/docs/materialized_aggregations).
 
 ```python
 from datetime import datetime
 from chalk import features, has_many, DataFrame, _
 from chalk.streams import Windowed, windowed
 
-@features(etl_offline_to_online=True)
+@features
 class Transaction:
     id: str
-    user_id: str
+    user_id: 'User.id'
     amount: float
     ts: datetime
 
-@features(max_staleness="infinity", etl_offline_to_online=True)
+@features
 class User:
     id: str
     name: str
-    transactions: DataFrame[Transaction] = has_many(lambda: User.id == Transaction.user_id, max_staleness="30d")
+    transactions: DataFrame[Transaction]
     sum_transaction_amount: Windowed[float] = windowed(
         "30d",
         expression=_.transactions[_.amount].sum(),
@@ -63,46 +62,33 @@ from pydantic import BaseModel
 from chalk import features, has_many, DataFrame, Features, _
 from chalk.streams import stream, KafkaSource
 
-class UserMsg(BaseModel):
-    id: str
-    name: str
-
 class TransactionMsg(BaseModel):
     id: str
     user_id: str
     amount: float
 
-user_topic = KafkaSource(name='...')
-transaction_topic = KafkaSource(name='...')
-
-@stream(source=user_topic)
-def process_user_topic(
-    value: UserMsg,
-) -> Features[User.id, User.name]:
-    return User(id=value.id, name=value.name)
-
-@stream(source=transaction_topic)
+@stream(source=KafkaSource(name='...'))
 def process_transaction_topic(
     value: TransactionMsg,
 ) -> Features[Transaction.id, Transaction.user_id, Transaction.amount]:
-    return Transaction(id=value.id, user_id=value.user_id, amount=value.amount)
+    return Transaction(
+        id=value.id,
+        user_id=value.user_id,
+        amount=value.amount,
+    )
 ```
 
 That's it! Now, when messages are received on the streams, Chalk will infer whether the output features
 of the stream resolver are relevant to materialized aggregations, and if so, will update and store the data
 in the existing materialized aggregations.
 
-There are two separate streams here (one for users and one for transactions), but only one of the stream resolvers
-will update materialized aggregations.
-
-- The resolver `process_user_topic` returns `User.id` and `User.name`, and neither of these features are related to the
-materialized aggregation features `User.sum_transaction_amount` and `User.mean_transaction_amount`. This means that
-this resolver will simply update the online store with the new values for `User.name` and `User.id`, and continue.
-- The resolver `process_transaction_topic` returns `Transaction.id`, `Transaction.user_id`, and `Transaction.amount`.
-These features are related to the materialized aggregation features: both `User.sum_transaction_amount` and
-`User.mean_transaction_amount` reference `_.amount` in their expressions, which corresponds to `Transaction.amount`.
-In addition, the feature `Transaction.user_id` is necessary to compute the join between `User` and `Transaction`.
-Thus, this resolver will update the materialized aggregations with the new values for `User.sum_transaction_amount` and
-`User.mean_transaction_amount` as these transaction messages are received.
+The resolver `process_transaction_topic` returns `Transaction.id`, `Transaction.user_id`, and `Transaction.amount`.
+These features are impact the materialized aggregate features `User.sum_transaction_amount` and
+`User.mean_transaction_amount`. Both require two features on transaction:
+`Transaction.user_id` (referenced through the join from `_.transactions`) and
+`Transaction.amount` (referenced by `_.amount` in the aggregation expression).
+When a streaming messages comes through, the resolver `process_transaction_topic` will update
+the materialized aggregations with the new values for `User.sum_transaction_amount` and
+`User.mean_transaction_amount`.
 
 To opt out of updating materialized aggregations, set `updates_materialized_aggregations=False` on the stream resolver.
