lint: restructuring it

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -10,8 +10,8 @@ published: true
 
 ### We now support ClickHouse as a Chalk data source
 
-You can query ClickHouse and other data sources using [standard SQL syntax](/docs/sql).
-Here's an example querying transaction data:
+Chalk can connect to your ClickHouse database and other data sources with [standard SQL syntax](/docs/sql).
+Here's an example of a SQL resolver for pulling transaction data:
 
 ```sql
 -- type: online
