fix: Adding grpc to this doc so that it's more searchable

--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -16,7 +16,7 @@ import { RequestUrl } from '@/components/RequestUrl'
 
 ---
 
-Chalk maintains several client libraries and a REST API for fetching feature values.
+Chalk maintains several client libraries (gRPC) and a REST API for fetching feature values.
 
 ---
 
