--- a/changelog.mdx
+++ b/changelog.mdx
@@ -8,7 +8,7 @@ published: true
 
 ## May 23, 2025
 
-# Embed Chalk expressions in versioned features
+### Embed Chalk expressions in versioned features
 
 [Feature versions](/docs/feature-versions) support [Chalk expressions](/docs/expression), allowing you to define different computation logic for each version of a feature.
 This makes it easy to experiment with new feature definitions—you can create multiple versions with different expressions and test them side-by-side to compare their accuracy, performance, and business impact.
