--- a/chalk-for-ai-engineers.mdx
+++ b/chalk-for-ai-engineers.mdx
@@ -16,9 +16,9 @@ Chalk's LLM toolchain enables you to build enterprise-grade AI applications with
 - Reuse and manage prompts with [named prompts](/docs/prompts)
 - Run large-scale evaluations using historical traffic to compare prompt variants
 
-Chalk provides a full-stack solution but can also integrate seamlessly with your current infrastructure. For instance, you can use
-an existing vector DB to store and retrieve your embeddings, while leveraging Chalk to evaluate new models and prompts. Chalk lets
-you integrate only the pieces you need:
+Chalk provides a full-stack solution but can also integrate seamlessly with your current infrastructure.
+For instance, you can use an existing vector DB to store and retrieve your embeddings, while leveraging Chalk to evaluate new models and prompts.
+Chalk lets you integrate only the pieces you need:
 
 ```py
 import chalk.functions as F
