--- a/chalk-for-ai-engineers.mdx
+++ b/chalk-for-ai-engineers.mdx
@@ -241,7 +241,7 @@ You can edit prompt templates directly from your Chalk dashboard and test featur
 
 ## Run large-scale evaluations using historical traffic with Chalk's feature store for realistic offline testing
 
-Chalk evals provides systematic comparison of prompt variants against historical datasets, supporting customizable metrics, reference outputs, and distributed processing for large-scale prompt experimentation.
+Chalk prompt evaluations provide systematic comparison of prompt variants against historical datasets, supporting customizable metrics, reference outputs, and distributed processing for large-scale prompt experimentation.
 Built-in evaluators like "exact_match" measure accuracy against reference outputs, while custom evaluation expressions allow for domain-specific metrics tailored to your application needs.
 
 ```py
