fix: feature caching link

--- a/chalk-for-ai-engineers.mdx
+++ b/chalk-for-ai-engineers.mdx
@@ -162,7 +162,7 @@ Chalk's LLM toolchain streamlines the entire experience of working with language
 
 ## Cache expensive computations to avoid redundant processing and reduce latency with Chalk's max_staleness setting
 
-Chalk makes it easy to [cache features](docs/feature-caching).
+Chalk makes it easy to [cache features](/docs/feature-caching).
 This is done by setting the `max_staleness` of a feature, which lets you specify how old a cached feature value can be before it must be recomputed.
 This gives you full control in balancing freshness and performance requirements.
 
