--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -21,14 +21,14 @@ import { PyDiffEditor } from '@/components/Editor'
 Build, deploy, and iterate faster with Chalk — a programmable feature engine that powers low-latency inference, rapid model iteration, and observability across your model lifecycle.
 Chalk eliminates the core pain points that slow down teams building enterprise AI and ML systems, providing an end-to-end platform for:
 
-- Deploying and scaling production-grade infrastructure
+- Deploying and scaling enterprise-grade infrastructure
 - Authoring feature pipelines in pure Python — No DSLs! No rewrites!
 - Building training datasets with high throughput batch offline queries and point-in-time correctness
 - Integrating unstructured data into production ML pipelines with LLMs
 - Serving fresh features on-the-fly with versioning, branching, and full observability
     - Gradually rollout, easily rollback, and feature flag models with version control
     - Collaborate across teams with branch-based QA
-    - A/B testing models and LLM prompts with real historical traffic
+    - A/B testing models and LLM prompts with historical production traffic
 
 Chalk is the first platform to unify feature and prompt engineering, LLM evals, and real-time low-latency inference into a unified platform.
 
